diaParser.py
# Generated from C:/Users/simon/Documents/hochschule/compiler/CompilerbauSemester4/dia.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class diaParser ( Parser ):

    grammarFileName = "dia.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'{'", "'}'", "';'" ]

    symbolicNames = [ "<INVALID>", "COMMENT_HASH", "COMMENT_SINGLE", "COMMENT_DOUBLE", 
                      "LPAREN", "RPAREN", "SEMICOLON", "LINEBREAK", "WS", 
                      "STRING_SINGLE", "STRING_DOUBLE", "CODE" ]

    RULE_rule_set = 0
    RULE_nestedStatements = 1
    RULE_statements = 2

    ruleNames =  [ "rule_set", "nestedStatements", "statements" ]

    EOF = Token.EOF
    COMMENT_HASH=1
    COMMENT_SINGLE=2
    COMMENT_DOUBLE=3
    LPAREN=4
    RPAREN=5
    SEMICOLON=6
    LINEBREAK=7
    WS=8
    STRING_SINGLE=9
    STRING_DOUBLE=10
    CODE=11

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class Rule_setContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(diaParser.EOF, 0)

        def statements(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(diaParser.StatementsContext)
            else:
                return self.getTypedRuleContext(diaParser.StatementsContext,i)


        def getRuleIndex(self):
            return diaParser.RULE_rule_set

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRule_set" ):
                listener.enterRule_set(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRule_set" ):
                listener.exitRule_set(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRule_set" ):
                return visitor.visitRule_set(self)
            else:
                return visitor.visitChildren(self)




    def rule_set(self):

        localctx = diaParser.Rule_setContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_rule_set)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 9
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 3678) != 0):
                self.state = 6
                self.statements()
                self.state = 11
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 12
            self.match(diaParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class NestedStatementsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LPAREN(self):
            return self.getToken(diaParser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(diaParser.RPAREN, 0)

        def statements(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(diaParser.StatementsContext)
            else:
                return self.getTypedRuleContext(diaParser.StatementsContext,i)


        def getRuleIndex(self):
            return diaParser.RULE_nestedStatements

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNestedStatements" ):
                listener.enterNestedStatements(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNestedStatements" ):
                listener.exitNestedStatements(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNestedStatements" ):
                return visitor.visitNestedStatements(self)
            else:
                return visitor.visitChildren(self)




    def nestedStatements(self):

        localctx = diaParser.NestedStatementsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_nestedStatements)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 14
            self.match(diaParser.LPAREN)
            self.state = 18
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 3678) != 0):
                self.state = 15
                self.statements()
                self.state = 20
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 21
            self.match(diaParser.RPAREN)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CODE(self):
            return self.getToken(diaParser.CODE, 0)

        def STRING_SINGLE(self):
            return self.getToken(diaParser.STRING_SINGLE, 0)

        def STRING_DOUBLE(self):
            return self.getToken(diaParser.STRING_DOUBLE, 0)

        def nestedStatements(self):
            return self.getTypedRuleContext(diaParser.NestedStatementsContext,0)


        def SEMICOLON(self):
            return self.getToken(diaParser.SEMICOLON, 0)

        def COMMENT_HASH(self):
            return self.getToken(diaParser.COMMENT_HASH, 0)

        def COMMENT_SINGLE(self):
            return self.getToken(diaParser.COMMENT_SINGLE, 0)

        def COMMENT_DOUBLE(self):
            return self.getToken(diaParser.COMMENT_DOUBLE, 0)

        def getRuleIndex(self):
            return diaParser.RULE_statements

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatements" ):
                listener.enterStatements(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatements" ):
                listener.exitStatements(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatements" ):
                return visitor.visitStatements(self)
            else:
                return visitor.visitChildren(self)




    def statements(self):

        localctx = diaParser.StatementsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_statements)
        try:
            self.state = 31
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [11]:
                self.enterOuterAlt(localctx, 1)
                self.state = 23
                self.match(diaParser.CODE)
                pass
            elif token in [9]:
                self.enterOuterAlt(localctx, 2)
                self.state = 24
                self.match(diaParser.STRING_SINGLE)
                pass
            elif token in [10]:
                self.enterOuterAlt(localctx, 3)
                self.state = 25
                self.match(diaParser.STRING_DOUBLE)
                pass
            elif token in [4]:
                self.enterOuterAlt(localctx, 4)
                self.state = 26
                self.nestedStatements()
                pass
            elif token in [6]:
                self.enterOuterAlt(localctx, 5)
                self.state = 27
                self.match(diaParser.SEMICOLON)
                pass
            elif token in [1]:
                self.enterOuterAlt(localctx, 6)
                self.state = 28
                self.match(diaParser.COMMENT_HASH)
                pass
            elif token in [2]:
                self.enterOuterAlt(localctx, 7)
                self.state = 29
                self.match(diaParser.COMMENT_SINGLE)
                pass
            elif token in [3]:
                self.enterOuterAlt(localctx, 8)
                self.state = 30
                self.match(diaParser.COMMENT_DOUBLE)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx





